--- a/packages.html
+++ b/packages.html
@@ -464,7 +464,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-start">
                         
-                        Designed By <a class="text-white" href="">Berkah Sumber Gizi</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a>
+                        Designed By <a class="text-white" href="">Berkah Sumber Gizi</a> Distributed By <a href="">Sumber Gizi</a>
                     </div>
                     </div>
                 </div>
